--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -14891,6 +14891,30 @@ img {
   width: auto;
   height: auto; }
 
+.position-xs-sticky {
+  position: sticky;
+  top: 0; }
+
+@media (min-width: 576px) {
+  .position-sm-sticky {
+    position: sticky;
+    top: 0; } }
+
+@media (min-width: 768px) {
+  .position-md-sticky {
+    position: sticky;
+    top: 0; } }
+
+@media (min-width: 992px) {
+  .position-lg-sticky {
+    position: sticky;
+    top: 0; } }
+
+@media (min-width: 1200px) {
+  .position-xl-sticky {
+    position: sticky;
+    top: 0; } }
+
 h1 + h1, h1 + h2, h1 + h3, h1 + h4, h1 + h5, h1 + h6, h2 + h1, h2 + h2, h2 + h3, h2 + h4, h2 + h5, h2 + h6, h3 + h1, h3 + h2, h3 + h3, h3 + h4, h3 + h5, h3 + h6, h4 + h1, h4 + h2, h4 + h3, h4 + h4, h4 + h5, h4 + h6, h5 + h1, h5 + h2, h5 + h3, h5 + h4, h5 + h5, h5 + h6, h6 + h1, h6 + h2, h6 + h3, h6 + h4, h6 + h5, h6 + h6 {
   margin-top: -.5rem; }
 
