--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_scaffolding.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_scaffolding.scss
@@ -17,3 +17,13 @@ img {
 .screen-reader-text {
 	@extend .sr-only;
 }
+
+
+@each $size, $value in $grid-breakpoints {
+	.position-#{$size}-sticky {
+		@include media-breakpoint-up($size) {
+			position: sticky;
+			top: 0;
+		}
+	}
+}
