Updating event reg form submit button style

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -346,7 +346,8 @@ $gform-gutter-width: 10px;
 	}
 }
 
-.general-contact-form_wrapper {
+.general-contact-form_wrapper,
+.event-registration-form_wrapper {
 	.gform_footer {
 		button[type=submit] {
 			@extend .btn-red;
