--- a/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
@@ -189,6 +189,13 @@ body {
 	}
 }
 
+.block-editor-block-list__block[data-type="crown-blocks/section-nav"] {
+	.wp-block-crown-blocks-section-nav {
+		.section-nav-title {
+			display: block;
+		}
+	}
+}
 
 .wp-block[data-type="crown-blocks/container-featured-image"] {
 	+ .wp-block[data-type="crown-blocks/container-featured-image"] {
