--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -18329,6 +18329,101 @@ nav.pagination {
           .wp-block-crown-blocks-section-nav .section-nav-nav .menu li:before {
             display: block; } }
 
+@media (min-width: 768px) {
+  .wp-block-crown-blocks-section-nav.layout-sidebar > .inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 -1rem;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start; } }
+
+.wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav {
+  background-color: transparent;
+  color: inherit;
+  padding: 0;
+  margin-bottom: 2rem; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav {
+      width: 33.33333%;
+      -webkit-box-ordinal-group: 3;
+          -ms-flex-order: 2;
+              order: 2;
+      bottom: 0;
+      padding: 0 1rem;
+      position: sticky;
+      top: 2rem; }
+      body.admin-bar .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav {
+        top: 4rem; } }
+  .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav > .inner {
+    display: block; }
+    @media (min-width: 992px) {
+      .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav > .inner {
+        padding-left: 1rem; } }
+    @media (min-width: 1200px) {
+      .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav > .inner {
+        padding-left: 6rem; } }
+    .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav > .inner:before {
+      display: none; }
+  .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav h2 {
+    font-size: 1.75rem;
+    text-transform: none;
+    letter-spacing: 0;
+    font-weight: 700;
+    padding-bottom: 0.875rem;
+    position: relative;
+    margin: 0;
+    margin-bottom: 1rem; }
+    .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav h2:after {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: 0.375rem;
+      background-color: #D44457;
+      background: -webkit-gradient(linear, left top, right top, from(#233053), to(#D44457));
+      background: linear-gradient(to right, #233053, #D44457); }
+  .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav .menu {
+    font-size: 1.25rem;
+    letter-spacing: 0;
+    font-weight: 700;
+    text-transform: none;
+    margin: 0;
+    display: block; }
+    .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav .menu li {
+      padding: 0;
+      margin: 0;
+      margin-top: .5rem; }
+      .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav .menu li:before {
+        display: none; }
+      @media (min-width: 768px) {
+        .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav .menu li.active a {
+          color: #108DBC; } }
+    .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav .menu a {
+      -webkit-transition: color .15s;
+      transition: color .15s; }
+      .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav .menu a:hover {
+        color: #108DBC; }
+
+@media (min-width: 768px) {
+  .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-contents {
+    padding: 0 1rem;
+    width: 66.66667%; } }
+
+.wp-block-crown-blocks-section-nav.layout-sidebar .wp-block-crown-blocks-section-nav-content {
+  margin-bottom: 2rem; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-section-nav.layout-sidebar .wp-block-crown-blocks-section-nav-content {
+      margin-bottom: 4rem; } }
+  @media (min-width: 1200px) {
+    .wp-block-crown-blocks-section-nav.layout-sidebar .wp-block-crown-blocks-section-nav-content {
+      margin-bottom: 6rem; } }
+  .wp-block-crown-blocks-section-nav.layout-sidebar .wp-block-crown-blocks-section-nav-content:last-child {
+    margin-bottom: 0; }
+
 .wp-block-crown-blocks-section-nav-content .section-nav-content-title {
   display: none; }
 
