--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -262,6 +262,112 @@
 			}
 		}
 	}
+	&.layout-sidebar {
+		> .inner {
+			@include media-breakpoint-up(md) {
+				display: flex;
+				margin: 0 -1rem;
+				align-items: flex-start;
+			}
+		}
+		.section-nav-nav {
+			background-color: transparent;
+			color: inherit;
+			padding: 0;
+			margin-bottom: 2rem;
+			@include media-breakpoint-up(md) {
+				width: percentage(1 / 3);
+				order: 2;
+				bottom: 0;
+				padding: 0 1rem;
+				position: sticky;
+				top: 2rem;
+				body.admin-bar & {
+					top: 4rem;
+				}
+			}
+			> .inner {
+				display: block;
+				@include media-breakpoint-up(lg) {
+					padding-left: 1rem;
+				}
+				@include media-breakpoint-up(xl) {
+					padding-left: 6rem;
+				}
+				&:before {
+					display: none;
+				}
+			}
+			h2 {
+				font-size: 1.75rem;
+				text-transform: none;
+				letter-spacing: 0;
+				font-weight: 700;
+				padding-bottom: .5rem + 0.375rem;
+				position: relative;
+				margin: 0;
+				margin-bottom: 1rem;
+				&:after {
+					content: '';
+					display: block;
+					position: absolute;
+					left: 0;
+					right: 0;
+					bottom: 0;
+					height: 0.375rem;
+					background-color: $red;
+					background: linear-gradient(to right, $dark-blue, $red);
+				}
+			}
+			.menu {
+				font-size: 1.25rem;
+				letter-spacing: 0;
+				font-weight: 700;
+				text-transform: none;
+				margin: 0;
+				display: block;
+				li {
+					padding: 0;
+					margin: 0;
+					margin-top: .5rem;
+					&:before {
+						display: none;
+					}
+					&.active {
+						a {
+							@include media-breakpoint-up(md) {
+								color: $blue;
+							}
+						}
+					}
+				}
+				a {
+					transition: color .15s;
+					&:hover {
+						color: $blue;
+					}
+				}
+			}
+		}
+		.section-nav-contents {
+			@include media-breakpoint-up(md) {
+				padding: 0 1rem;
+				width: percentage(2 / 3);
+			}
+		}
+		.wp-block-crown-blocks-section-nav-content {
+			margin-bottom: 2rem;
+			@include media-breakpoint-up(md) {
+				margin-bottom: 4rem;
+			}
+			@include media-breakpoint-up(xl) {
+				margin-bottom: 6rem;
+			}
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
 }
 .wp-block-crown-blocks-section-nav-content {
 	.section-nav-content-title {
