--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -2524,6 +2524,14 @@
 			border-color: $primary;
 		}
 	}
+	.entry-centers,
+	.entry-topics {
+		a {
+			&:hover {
+				color: $primary;
+			}
+		}
+	}
 	.entry-title {
 		font-family: $font-family-base;
 	}
