--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -19678,6 +19678,12 @@ nav.pagination {
   display: flex;
   -webkit-transition: background-color .2s;
   transition: background-color .2s; }
+  @media (min-width: 992px) {
+    .wp-block-crown-blocks-team-member-index article.type-team_member {
+      width: 33.33333%; } }
+  @media (min-width: 1200px) {
+    .wp-block-crown-blocks-team-member-index article.type-team_member {
+      width: 25%; } }
   .wp-block-crown-blocks-team-member-index article.type-team_member.active {
     background-color: rgba(35, 48, 83, 0.1); }
     @media (min-width: 768px) {
@@ -19728,25 +19734,11 @@ nav.pagination {
       -webkit-box-direction: normal;
           -ms-flex-direction: column;
               flex-direction: column; }
-      @media (min-width: 992px) {
-        .wp-block-crown-blocks-team-member-index article.type-team_member a > .inner {
-          -webkit-box-orient: horizontal;
-          -webkit-box-direction: normal;
-              -ms-flex-direction: row;
-                  flex-direction: row; } }
   .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo {
     margin-bottom: .5rem; }
     @media (min-width: 768px) {
       .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo {
         margin-bottom: 1rem; } }
-    @media (min-width: 992px) {
-      .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo {
-        width: 40%;
-        margin-right: 1.5rem;
-        -webkit-box-flex: 0;
-            -ms-flex: 0 0 40%;
-                flex: 0 0 40%;
-        margin-bottom: 0; } }
     .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo > .inner {
       height: 0;
       position: relative;
@@ -19822,18 +19814,12 @@ nav.pagination {
       .wp-block-crown-blocks-team-member-index article.type-team_member .entry-header {
         padding-bottom: .75rem;
         border-bottom-width: 6px; } }
-    @media (min-width: 1200px) {
-      .wp-block-crown-blocks-team-member-index article.type-team_member .entry-header {
-        padding-top: 1rem; } }
   .wp-block-crown-blocks-team-member-index article.type-team_member .entry-title {
     font-size: 1rem;
     margin-bottom: .25rem; }
     @media (min-width: 768px) {
       .wp-block-crown-blocks-team-member-index article.type-team_member .entry-title {
         font-size: 2rem; } }
-    @media (min-width: 1200px) {
-      .wp-block-crown-blocks-team-member-index article.type-team_member .entry-title {
-        font-size: 3rem; } }
   .wp-block-crown-blocks-team-member-index article.type-team_member .entry-job-title {
     line-height: 1.2;
     font-size: 0.875rem;
@@ -19845,9 +19831,6 @@ nav.pagination {
         font-size: 1.25rem;
         font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         font-style: normal; } }
-    @media (min-width: 1200px) {
-      .wp-block-crown-blocks-team-member-index article.type-team_member .entry-job-title {
-        font-size: 1.5rem; } }
   .wp-block-crown-blocks-team-member-index article.type-team_member .entry-centers {
     margin-bottom: 1rem;
     margin-top: -0.5rem; }
@@ -19878,10 +19861,6 @@ nav.pagination {
       .wp-block-crown-blocks-team-member-index article.type-team_member .entry-link {
         font-size: 1.25rem;
         margin-top: 1rem; } }
-    @media (min-width: 992px) {
-      .wp-block-crown-blocks-team-member-index article.type-team_member .entry-link {
-        padding-bottom: .5rem;
-        opacity: 0; } }
     .wp-block-crown-blocks-team-member-index article.type-team_member .entry-link span {
       letter-spacing: .1em;
       text-transform: uppercase;
@@ -19904,10 +19883,6 @@ nav.pagination {
         position: relative;
         -webkit-transition: left .2s .2s, opacity .2s .2s;
         transition: left .2s .2s, opacity .2s .2s; }
-        @media (min-width: 992px) {
-          .wp-block-crown-blocks-team-member-index article.type-team_member .entry-link span:after {
-            left: -.5rem;
-            opacity: 0; } }
   .wp-block-crown-blocks-team-member-index article.type-team_member .entry-details {
     display: none; }
 
