--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1584,6 +1584,12 @@
 		width: 50%;
 		display: flex;
 		transition: background-color .2s;
+		@include media-breakpoint-up(lg) {
+			width: percentage(1 / 3);
+		}
+		@include media-breakpoint-up(xl) {
+			width: percentage(1 / 4);
+		}
 		&.active {
 			background-color: rgba($primary, .1);
 			@include media-breakpoint-up(md) {
@@ -1644,9 +1650,9 @@
 				display: flex;
 				width: 100%;
 				flex-direction: column;
-				@include media-breakpoint-up(lg) {
-					flex-direction: row;
-				}
+				// @include media-breakpoint-up(lg) {
+				// 	flex-direction: row;
+				// }
 			}
 		}
 		.entry-headshot-photo {
@@ -1654,12 +1660,12 @@
 			@include media-breakpoint-up(md) {
 				margin-bottom: 1rem;
 			}
-			@include media-breakpoint-up(lg) {
-				width: 40%;
-				margin-right: 1.5rem;
-				flex: 0 0 40%;
-				margin-bottom: 0;
-			}
+			// @include media-breakpoint-up(lg) {
+			// 	width: 40%;
+			// 	margin-right: 1.5rem;
+			// 	flex: 0 0 40%;
+			// 	margin-bottom: 0;
+			// }
 			> .inner {
 				height: 0;
 				position: relative;
@@ -1726,9 +1732,9 @@
 				padding-bottom: .75rem;
 				border-bottom-width: 6px;
 			}
-			@include media-breakpoint-up(xl) {
-				padding-top: 1rem;
-			}
+			// @include media-breakpoint-up(xl) {
+			// 	padding-top: 1rem;
+			// }
 		}
 		.entry-title {
 			font-size: 1rem;
@@ -1736,9 +1742,9 @@
 			@include media-breakpoint-up(md) {
 				font-size: 2rem;
 			}
-			@include media-breakpoint-up(xl) {
-				font-size: 3rem;
-			}
+			// @include media-breakpoint-up(xl) {
+			// 	font-size: 3rem;
+			// }
 		}
 		.entry-job-title {
 			line-height: $line-height-sm;
@@ -1751,9 +1757,9 @@
 				font-family: $font-family-base;
 				font-style: normal;
 			}
-			@include media-breakpoint-up(xl) {
-				font-size: 1.5rem;
-			}
+			// @include media-breakpoint-up(xl) {
+			// 	font-size: 1.5rem;
+			// }
 		}
 		.entry-centers {
 			margin-bottom: 1rem;
@@ -1786,10 +1792,10 @@
 				font-size: 1.25rem;
 				margin-top: 1rem;
 			}
-			@include media-breakpoint-up(lg) {
-				padding-bottom: .5rem;
-				opacity: 0;
-			}
+			// @include media-breakpoint-up(lg) {
+			// 	padding-bottom: .5rem;
+			// 	opacity: 0;
+			// }
 			span {
 				letter-spacing: .1em;
 				text-transform: uppercase;
@@ -1803,10 +1809,10 @@
 					font-size: 2em;
 					position: relative;
 					transition: left .2s .2s, opacity .2s .2s;
-					@include media-breakpoint-up(lg) {
-						left: -.5rem;
-						opacity: 0;
-					}
+					// @include media-breakpoint-up(lg) {
+					// 	left: -.5rem;
+					// 	opacity: 0;
+					// }
 				}
 			}
 		}
