--- a/wp-content/plugins/crown-blocks/src/block-two-column-scroll-slider/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-two-column-scroll-slider/style.scss
@@ -1,26 +1,23 @@
 
 
-.wp-block-crown-blocks-multi-column {
+.wp-block-crown-blocks-two-column-scroll-slider {
 
-	> .inner > .multi-column-columns > .inner {
+	> .inner > .wp-block-crown-blocks-two-column-scroll-slider-slide > .inner {
 		grid-gap: 0;
 		grid-template-columns: repeat(12, 1fr);
-		> .wp-block-crown-blocks-column {
-			min-width: 0;
+		> .wp-block-crown-blocks-container {
+			margin: 0;
 		}
 	}
 	
-	$column-container-selector: '> .inner > .multi-column-columns > .inner';
-	$column-selector: '> .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column';
+	$column-container-selector: '> .inner > .wp-block-crown-blocks-two-column-scroll-slider-slide > .inner';
+	$column-selector: '> .inner > .wp-block-crown-blocks-two-column-scroll-slider-slide > .inner > .wp-block-crown-blocks-container';
 
 	&.column-breakpoint-xs #{$column-container-selector} { display: grid; }
 	&.column-breakpoint-xs {
 		@for $i from 1 through 11 {
 			&.column-layout-xs-#{$i} #{$column-selector}:nth-child(1) { grid-column: 1 / span $i; }
 			&.column-layout-xs-#{$i} #{$column-selector}:nth-child(2) { grid-column: ($i + 1) / span (12 - $i); }
-		}
-		@for $i from 0 through 16 {
-			&.column-spacing-xs-#{$i} #{$column-container-selector} { grid-gap: $i * 1rem; }
 		}
 	}
 	
@@ -30,9 +27,6 @@
 			@for $i from 1 through 11 {
 				&.column-layout-sm-#{$i} #{$column-selector}:nth-child(1) { grid-column: 1 / span $i; }
 				&.column-layout-sm-#{$i} #{$column-selector}:nth-child(2) { grid-column: ($i + 1) / span (12 - $i); }
-			}
-			@for $i from 0 through 16 {
-				&.column-spacing-sm-#{$i} #{$column-container-selector} { grid-gap: $i * 1rem; }
 			}
 		}
 	}
@@ -44,9 +38,6 @@
 				&.column-layout-md-#{$i} #{$column-selector}:nth-child(1) { grid-column: 1 / span $i; }
 				&.column-layout-md-#{$i} #{$column-selector}:nth-child(2) { grid-column: ($i + 1) / span (12 - $i); }
 			}
-			@for $i from 0 through 16 {
-				&.column-spacing-md-#{$i} #{$column-container-selector} { grid-gap: $i * 1rem; }
-			}
 		}
 	}
 
@@ -57,9 +48,6 @@
 				&.column-layout-lg-#{$i} #{$column-selector}:nth-child(1) { grid-column: 1 / span $i; }
 				&.column-layout-lg-#{$i} #{$column-selector}:nth-child(2) { grid-column: ($i + 1) / span (12 - $i); }
 			}
-			@for $i from 0 through 16 {
-				&.column-spacing-lg-#{$i} #{$column-container-selector} { grid-gap: $i * 1rem; }
-			}
 		}
 	}
 
@@ -69,9 +57,6 @@
 			@for $i from 1 through 11 {
 				&.column-layout-xl-#{$i} #{$column-selector}:nth-child(1) { grid-column: 1 / span $i; }
 				&.column-layout-xl-#{$i} #{$column-selector}:nth-child(2) { grid-column: ($i + 1) / span (12 - $i); }
-			}
-			@for $i from 0 through 16 {
-				&.column-spacing-xl-#{$i} #{$column-container-selector} { grid-gap: $i * 1rem; }
 			}
 		}
 	}
