--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -2038,6 +2038,7 @@
 			.entry-headshot-photo {
 				margin: -2rem -2rem 2rem;
 				width: auto;
+				display: none;
 				.image {
 					opacity: 1;
 					mix-blend-mode: normal;
