--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -24260,6 +24260,9 @@ body.mobile-menu-active {
     -webkit-box-shadow: inset 0 -2px #D44457;
             box-shadow: inset 0 -2px #D44457; }
 
+.gfield.gfield_visibility_hidden {
+  display: none; }
+
 .gfield.no-label .gfield_label, .gfield.hidden_label .gfield_label {
   display: none; }
 
