Updating red color

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -6,7 +6,7 @@ $dark-blue:    #233053 !default;
 $blue:         #108DBC !default;
 $light-blue:   #D0E4F8 !default;
 $x-light-blue: #F4F8FD !default;
-$red:          #D44457 !default;
+$red:          #E60045 !default;
 $green:        #AED540 !default;
 $light-gray:   #E6EDF4 !default;
 $gray:         #7F94AA !default;
