--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -2015,7 +2015,7 @@
 				}
 				&:before {
 					content: '×';
-					font-family: $font-family-base;
+					font-family: $font-family-sans-serif-alt;
 					display: inline-block;
 					margin-right: .2em;
 					font-style: normal;
