--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -18960,27 +18960,30 @@ nav.pagination {
   @media (min-width: 783px) {
     body.admin-bar .wp-block-crown-blocks-section-nav .section-nav-nav {
       top: 32px; } }
-  @media (min-width: 768px) {
-    .wp-block-crown-blocks-section-nav .section-nav-nav > .inner {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between; } }
-  @media (min-width: 992px) {
-    .wp-block-crown-blocks-section-nav .section-nav-nav > .inner:before {
-      content: '';
-      display: block;
-      height: 6px;
-      -webkit-box-flex: 1;
-          -ms-flex: 1 1 auto;
-              flex: 1 1 auto;
-      min-width: 40px;
-      background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(#fff));
-      background: linear-gradient(to right, rgba(255, 255, 255, 0), #fff);
-      margin-right: 2rem;
-      margin-top: .6rem; } }
+  .wp-block-crown-blocks-section-nav .section-nav-nav > .inner {
+    max-width: 1260px;
+    margin: 0 auto; }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-section-nav .section-nav-nav > .inner {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between; } }
+    @media (min-width: 992px) {
+      .wp-block-crown-blocks-section-nav .section-nav-nav > .inner:before {
+        content: '';
+        display: block;
+        height: 6px;
+        -webkit-box-flex: 1;
+            -ms-flex: 1 1 auto;
+                flex: 1 1 auto;
+        min-width: 40px;
+        background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(#fff));
+        background: linear-gradient(to right, rgba(255, 255, 255, 0), #fff);
+        margin-right: 2rem;
+        margin-top: .6rem; } }
   .wp-block-crown-blocks-section-nav .section-nav-nav h2 {
     font-size: 1.375rem;
     text-transform: uppercase;
