--- a/wp-content/plugins/crown-blocks/src/block-center-finder/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-center-finder/style.scss
@@ -5,6 +5,9 @@
 		max-width: 360px;
 		margin: 0 auto 2rem;
 		display: flex;
+		@media (min-width: 768px) {
+			margin-bottom: 4rem;
+		}
 		.field {
 			flex: 1 1 auto;
 		}
@@ -16,16 +19,34 @@
 		max-width: 800px;
 		margin: 0 auto;
 	}
+	.results {
+		@media (min-width: 768px) {
+			display: flex;
+			margin: 0 -1rem;
+		}
+	}
 	.map {
-		margin-bottom: 2rem;
 		display: none;
-		@media (min-width: 992px) {
+		align-self: flex-start;
+		position: sticky;
+		top: 2rem;
+		body.admin-bar & {
+			top: calc(32px + 2rem);
+		}
+		@media (min-width: 768px) {
 			display: block;
+			padding: 0 1rem;
+			width: percentage(7 / 12);
+		}
+		@media (min-width: 992px) {
+			width: percentage(2 / 3);
 		}
 		> .inner {
 			position: relative;
-			height: 0;
-			padding-top: 40%;
+			height: calc(100vh - 4rem);
+			body.admin-bar & {
+				height: calc(100vh - 4rem - 32px);
+			}
 		}
 		.google-map {
 			position: absolute;
@@ -53,39 +74,35 @@
 			}
 		}
 	}
-	.results {
-		@media (min-width: 992px) {
-			display: flex;
-		}
-	}
 	.locations {
+		@media (min-width: 768px) {
+			padding: 0 1rem;
+			width: percentage(5 / 12);
+		}
 		@media (min-width: 992px) {
-			margin-right: 1rem;
-			max-height: 720px;
-			overflow: auto;
-			width: 50%;
+			width: percentage(1 / 3);
 		}
 		article.location {
 			font-size: 1rem;
-			@media (min-width: 576px) {
-				display: flex;
-			}
+			// @media (min-width: 1200px) {
+			// 	display: flex;
+			// }
 			.entry-featured-image,
 			.entry-link {
 				display: none;
 			}
 			.entry-header {
-				@media (min-width: 576px) {
-					margin-bottom: 0;
-					margin-right: 1rem;
-					width: 50%;
-				}
+				// @media (min-width: 1200px) {
+				// 	margin-bottom: 0;
+				// 	margin-right: 1rem;
+				// 	width: 50%;
+				// }
 			}
 			.entry-contents {
-				@media (min-width: 576px) {
-					width: 50%;
-					margin-left: 1rem;
-				}
+				// @media (min-width: 1200px) {
+				// 	width: 50%;
+				// 	margin-left: 1rem;
+				// }
 			}
 			.entry-title,
 			.entry-distance {
@@ -97,7 +114,7 @@
 	.preview {
 		display: none;
 		@media (min-width: 992px) {
-			display: flex;
+			// display: flex;
 			margin-left: 1rem;
 			width: 50%;
 		}
