--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1555,7 +1555,7 @@
 	}
 	.locations {
 		article.location {
-			@include media-breakpoint-up(lg) {
+			@include media-breakpoint-up(md) {
 				cursor: pointer;
 			}
 			@include media-breakpoint-up(xl) {
@@ -1570,7 +1570,7 @@
 				}
 			}
 			&.active {
-				@include media-breakpoint-up(lg) {
+				@include media-breakpoint-up(md) {
 					background-color: $blue;
 					color: #fff;
 					a {
