--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -21248,8 +21248,10 @@ nav.pagination {
     .wp-block-crown-blocks-post-index article.type-post a.color-dark-gray {
       background-color: #343a40; }
     .wp-block-crown-blocks-post-index article.type-post a:hover {
-      -webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-              box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); }
+      -webkit-box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
+              box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15); }
+      .wp-block-crown-blocks-post-index article.type-post a:hover .entry-featured-image {
+        opacity: 1; }
       .wp-block-crown-blocks-post-index article.type-post a:hover .entry-categories span {
         border-color: #fff; }
       .wp-block-crown-blocks-post-index article.type-post a:hover .entry-link > span:nth-child(1):before {
@@ -21269,7 +21271,10 @@ nav.pagination {
       width: 100%; }
   .wp-block-crown-blocks-post-index article.type-post .entry-featured-image {
     display: none;
-    width: 30%; }
+    width: 30%;
+    opacity: .5;
+    -webkit-transition: opacity .4s;
+    transition: opacity .4s; }
     @media (min-width: 768px) {
       .wp-block-crown-blocks-post-index article.type-post .entry-featured-image {
         display: -webkit-box;
@@ -21773,6 +21778,8 @@ nav.pagination {
     .wp-block-crown-blocks-client-story-index article.type-client_story a:hover {
       -webkit-box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
               box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15); }
+      .wp-block-crown-blocks-client-story-index article.type-client_story a:hover .entry-featured-image {
+        opacity: 1; }
       .wp-block-crown-blocks-client-story-index article.type-client_story a:hover .entry-link > span:nth-child(1):before {
         max-width: 100%; }
       .wp-block-crown-blocks-client-story-index article.type-client_story a:hover .entry-link > span:nth-child(2) {
@@ -21803,7 +21810,10 @@ nav.pagination {
       display: flex; }
   .wp-block-crown-blocks-client-story-index article.type-client_story .entry-featured-image {
     display: none;
-    width: 30%; }
+    width: 30%;
+    opacity: .5;
+    -webkit-transition: opacity .4s;
+    transition: opacity .4s; }
     @media (min-width: 768px) {
       .wp-block-crown-blocks-client-story-index article.type-client_story .entry-featured-image {
         display: -webkit-box;
