--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -2263,7 +2263,8 @@
 			&.color-gray { background-color: $gray; }
 			&.color-dark-gray { background-color: $dark-gray; }
 			&:hover {
-				box-shadow: 0 4px 16px rgba(#000, .2);
+				box-shadow: 0 .5rem 1.5rem rgba(#000, .15);
+				.entry-featured-image { opacity: 1; }
 				.entry-categories span { border-color: #fff; }
 				// .entry-teaser:after { opacity: 1; margin-right: 0; transition-delay: .2s; }
 				.entry-link > span:nth-child(1):before {
@@ -2280,6 +2281,8 @@
 		.entry-featured-image {
 			display: none;
 			width: 30%;
+			opacity: .5;
+			transition: opacity .4s;
 			@include media-breakpoint-up(md) {
 				display: flex;
 				+ .entry-teaser {
@@ -2814,6 +2817,7 @@
 			transition: box-shadow .5s;
 			&:hover {
 				box-shadow: 0 .5rem 1.5rem rgba(#000, .15);
+				.entry-featured-image { opacity: 1; }
 				.entry-link > span:nth-child(1):before {
 					max-width: 100%;
 				}
@@ -2837,6 +2841,8 @@
 		.entry-featured-image {
 			display: none;
 			width: 30%;
+			opacity: .5;
+			transition: opacity .4s;
 			@include media-breakpoint-up(md) {
 				display: flex;
 				+ .entry-teaser {
