--- a/wp-content/plugins/crown-blocks/src/block-client-story-header/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-client-story-header/style.scss
@@ -67,7 +67,7 @@
 
 	.entry-centers {
 		margin-bottom: 1rem;
-		span {
+		.center {
 			display: inline-block;
 			line-height: 1.2;
 			font-weight: 700;
@@ -77,6 +77,14 @@
 			border-radius: 10rem;
 			border: 1px solid #fff;
 			padding: .5rem .75rem;
+			color: inherit;
+		}
+		a {
+			transition: background-color .2s, color .2s, boder-color .2s;
+			&:hover {
+				background-color: #fff;
+				color: #333;
+			}
 		}
 	}
 
