Changing default header line color

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1479,6 +1479,16 @@
 }
 
 
+/*	Header
+---------------------------------------------------------*/
+
+.wp-block-crown-blocks-header {
+	> hr {
+		background-color: $red;
+	}
+}
+
+
 /*	Stat Table
 ---------------------------------------------------------*/
 
