--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -20508,6 +20508,11 @@ nav.pagination {
     .wp-block-crown-blocks-stat .stat-label strong {
       color: #233053; }
 
+/*	Header
+---------------------------------------------------------*/
+.wp-block-crown-blocks-header > hr {
+  background-color: #E60045; }
+
 /*	Stat Table
 ---------------------------------------------------------*/
 .wp-block-crown-blocks-stat-table {
